<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Popcorn Time Remote</string>
    <string name="action_settings">Settings</string>
    <string name="ip_address">IP:</string>
    <string name="port">Port:</string>
    <string name="password">Password:</string>
    <string name="details">Remote API Details:</string>
    <string name="connect">Connect</string>
    <string name="username">Username:</string>
    <string name="pref_ip">com.popcorntime.apps.remote.ip</string>
    <string name="pref_port">com.popcorntime.apps.remote.port</string>
    <string name="pref_username">com.popcorntime.apps.remote.username</string>
    <string name="pref_password">com.popcorntime.apps.remote.password</string>

</resources>
